# citra

./: .gitmodules  CMakeLists.txt  build_ios.sh
.ci/macos/: deps.sh  upload.sh
.github/workflows/: ci-ios.yml  ci.yml
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  coreaudio_sink.cpp  coreaudio_sink.h  sink_details.cpp
src/citra/: CMakeLists.txt  citra.cpp  config.cpp
src/citra_ios/: AppDelegate.swift  Bridge.h  CMakeLists.txt  Emulator.h  Emulator.mm  EmulatorInput.swift  EmulatorViewController.swift  FileSelectorTableViewController.swift  InputBridge.h  InputBridge.mm  TopViewController.swift
src/citra_ios/resources/: Info.plist.in
src/citra_qt/: CMakeLists.txt  applesurfacehelper.h  applesurfacehelper.mm  bootmanager.cpp  bootmanager.h  main.cpp  main.h
src/common/: CMakeLists.txt  async_handle.h  bit_util.h  common_funcs.h  common_paths.h  dds-ktx.h  dds.h  error.cpp  file_util.h  hash.h  image_util.cpp  image_util.h  math_util.h  memory_ref.h  polyfill_thread.h  scratch_buffer.h  settings.cpp  settings.h  telemetry.h  thread.h  thread_worker.h  threadsafe_queue.h
src/core/: CMakeLists.txt  core.cpp  core.h  custom_tex_cache.cpp  memory.cpp  memory.h  telemetry_session.cpp  telemetry_session.h
src/core/hw/: gpu.h
src/input_common/: CMakeLists.txt  main.cpp
src/video_core/: CMakeLists.txt  pica.cpp  rasterizer_accelerated.cpp  rasterizer_accelerated.h  rasterizer_interface.h  regs_framebuffer.h  regs_rasterizer.h  regs_texturing.h  renderer_base.cpp  renderer_base.h  video_core.cpp  video_core.h
src/web_service/: verify_user_jwt.cpp
(+165 files in other folders)
